<resources>
    <string name="app_name">TraiLead</string>
    <string name="user_email_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_btn_text">Ingresar</string>
    <string name="scheme_app_name">trailead</string>
    <string name="logout_btn_text">Cerrar Session</string>
    <string name="trainees">Trainees</string>
    <string name="toolbar_profile">Perfil</string>
    <string name="toolbar_trainees">Listado de Trainees</string>
    <string name="toolbar_unlinked_trainees">Listado de Trainees sin líder</string>
    <string name="init">Inicio</string>
    <string name="more">Más</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="empty_trainee_list">La lista de trainee esta vacía</string>
    <string name="welcome_to_home">Bienvenido al menu principal</string>

    <!-- Dialog -->
    <string name="dialog_title_add_trainee">Agregar Trainee</string>
    <string name="dialog_message_add_trainee">Esta seguro que desea agregar a %s como su nuevo Trainee</string>
    <string name="dialog_title_removed_trainee">Eliminar Trainee</string>
    <string name="dialog_title_unlinked_trainee">Desvincular Trainee</string>
    <string name="dialog_message_removed_trainee">Esta seguro que desea eliminar a %s de su lista de Trainees</string>
    <string name="dialog_message_delete_trainee">Esta seguro que desea eliminar la cuenta: %s </string>
    <string name="dialog_message_unlinked_trainee">Esta seguro que desea desvincular a %s de su lista de Trainees</string>

    <string name="welcome_home_trainee">Hola %s</string>
    <string name="trainee_test">Test</string>
    <string name="place_holder_name">John Doe</string>
    <string name="email">Email</string>
    <string name="position">Rol</string>
    <string name="last_time">Ultima vez</string>
    <string name="assigned_leader">Líder asignado</string>
    <string name="edit_trainee_profile_name">Editar nombre</string>
    <string name="edit_trainee_rol">Editar Rol</string>
    <string name="edit_material_trainee">Asignar categoría</string>
    <string name="config_material_trainee_toolbar">Configurar categorias a %s</string>
    <string name="unlinked_trainee">Desvincular</string>
    <string name="delete_trainee">Eliminar Trainee</string>
    <string name="config_trainee">Configuración</string>
    <string name="edit_trainee_profile_password">Editar contraseña</string>
    <string name="edit_profile_last_name">Ingrese su nuevo apellido</string>
    <string name="edit_profile_name">Ingrese su nuevo nombre</string>
    <string name="edit_rol">Seleccione el nuevo rol</string>
    <string name="edit_profile_password">Ingrese su nueva contraseña</string>
    <string name="edit_profile_repeat_password">Ingrese nuevamente su nueva contraseña</string>
    <string name="edit_button">Modificar</string>
    <string name="rol_junior">JUNIOR</string>
    <string name="rol_semisenior">SEMISENIOR</string>
    <string name="rol_senior">SENIOR</string>
    <string name="update_pass_success">Su contraseña fue actualizada correctamente</string>
    <string name="update_pass_failed">Hubo un error al actualizar la contraseña</string>
    <string name="update_pass_failed_input">Por favor ingrese una contraseña válida.\nRecuerde que debe tener más de 6 caracteres.</string>
    <string name="add_new_category">Agregar nueva categoría</string>
    <string name="add_new_category_hint">Agregue la nueva categoría</string>
    <string name="add_new_category_button">Agregar</string>
    <string name="toolbar_setting_category">Configurar Categoría</string>
    <string name="delete">Eliminar</string>
    <string name="save">Guardar</string>
    <string name="dialog_message_delete_category">Esta seguro que desea eliminar la categoría %s</string>
    <string name="save_category_success">Se actualizó correctamente</string>
    <string name="error">Error</string>
    <string name="unexpected_error">Hubo un error, intente más tarde</string>
    <string name="error_message_dialog_category">Ingrese un nombre de categoría diferente</string>
    <string name="leader_material_list_title">Material</string>
    <string name="add_new_material_hint">Ingresar la URL completa del video de youtube</string>
    <string name="add_new_material">Agregar %s</string>
    <string name="add_new_material_title_hint">Ingrese un título descriptivo del video</string>
    <string name="full_screen">Maximizar</string>
    <string name="empty_string" />
    <string name="place_holder_title">titulo</string>
    <string name="edit_material">Editar</string>
    <string name="edit_material_link">Editar Link</string>
    <string name="edit_material_title">Editar Video</string>
    <string name="edit_title_material_label">Ingresar nuevo título del video</string>
    <string name="edit_material_url_label">Ingresar la url del nuevo video</string>
    <string name="category_selected_to_link">Seleccione una categoría</string>
    <string name="selected_all">Todo</string>
    <string name="category">Categoria</string>
    <string name="title_training_toolbar">Material de entrenamiento</string>
    <string name="link">Link</string>
    <string name="add_title">Agregar</string>
    <string name="add_title_new_link_description">Agregue el título para su link</string>
    <string name="add_new_link_description">Agregue el Link (Debe comenzar con https://)</string>
    <string name="error_empty_field">Algunos de los campos se encuentran vacíos</string>
    <string name="error_generic">Hubo un error,por favor vuelva a realizar la operación nuevamente.</string>
    <string name="error_invalid_link">Ingrese un link válido. Recuerde que debe ser un dominio válido y comenzar con https://</string>

    <string name="repeate_password_hint">Repetir contraseña</string>
    <string name="name_hint">Nombre</string>
    <string name="last_name_hint">Apellido</string>
    <string name="email_hint">Email</string>
    <string name="cancel_btn_text">Cancelar</string>
    <string name="register_btn_text">Registrarse</string>
    <string name="trainee">Trainee</string>
    <string name="leader">Leader</string>
    <string name="home">Inicio</string>
    <string name="profile">Perfil</string>

    <!--  Dialog  -->
    <string name="title_error">Error</string>
    <string name="neutral_dialog">Entendido</string>
    <string name="positive_dialog">OK</string>
    <string name="negative_dialog">Cancelar</string>

    <!--    Register    -->
    <string name="error_register">Existe uno o más campos incorrectos, por favor modique los valores y vuelva a registrarse</string>
    <string name="error_user_existe_register">El usuario ya existe</string>
    <string name="success_register">El usuario ha sido creado exitosamente</string>

    <!--    Login    -->
    <string name="error_login">El usuario o la contraseña que ha ingresado es incorrecta, por favor vuelva a intentarlo</string>
    <string name="error_login_home">No se pudo cargar la información del usuario</string>
    <string name="host_login">login</string>

    <!--    Deeplinks    -->
    <string name="host_trainee_home">trainee_home</string>
    <string name="host_leader_home">leader_home</string>
    <string name="restore_password">Recuperar contraseña</string>
    <string name="restore_password_label">Ingrese email para recuperar su contraseña</string>
    <string name="restore">Recuperar</string>
    <string name="input_hint_restore_password">Ingresa el email de tu cuenta</string>
    <string name="restore_password_key_access_hint">Ingrese el código de seguridad</string>
    <string name="user_not_found">\"El usuario no se encuentra registrado\"</string>
    <string name="invalid_email">\"Ingrese un email válido\"</string>
    <string name="internet_connection">No hay conexión a internet</string>
    <string name="email_sent">Te enviamos un email para restaurar la contraseña</string>
    <string name="pdf">PDF</string>
    <string name="add_pdf_information">Ingresar el Título del PDF</string>
    <string name="search">Buscar</string>
    <string name="do_not_file_selected">No hay archivo seleccionado</string>
    <string name="pdf_preview">Pre visualización del PDF</string>
    <string name="show_error_save_pdf">Hubo un error al guardar el PDF, intente nuevamente.</string>
    <string name="success">Se guardó correctamente</string>

    <string name="delete_pdf">Eliminar PDF</string>
    <string name="delete_pdf_message">Esta seguro que desea eliminar: %s</string>
    <string name="edit_material_pdf_title">Editar el título del PDF</string>
    <string name="add_title_new_pdf_description">Ingresá el nuevo título de tu PDF</string>

</resources>