<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.aferrari.trailead.home.viewmodel.leader.HomeLeaderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/trainee_config_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/default_toolbar_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/primaryColor"
            app:title="@string/config_trainee" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/config_name_label_icon_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/ic_profile"
            android:text="@string/name_hint"
            android:theme="@style/traiLead_text"
            android:tint="@color/primaryColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trainee_config_toolbar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/config_name_label_id"
            style="@style/traiLead_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@{viewModel.traineeSelected.name + ' ' + viewModel.traineeSelected.lastName}"
            android:theme="@style/traiLead_text"
            app:layout_constraintStart_toEndOf="@id/config_name_label_icon_id"
            app:layout_constraintTop_toTopOf="@id/config_name_label_icon_id" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/config_email_label_icon_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/ic_email"
            android:text="@string/email_hint"
            android:theme="@style/traiLead_text"
            android:tint="@color/primaryColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/config_name_label_icon_id" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/config_email_label_id"
            style="@style/traiLead_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:text="@{viewModel.traineeSelected.email}"
            android:theme="@style/traiLead_text"
            app:layout_constraintStart_toEndOf="@id/config_email_label_icon_id"
            app:layout_constraintTop_toTopOf="@id/config_email_label_icon_id" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/config_position_label_icon_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/ic_position"
            android:text="@string/position"
            android:theme="@style/traiLead_text"
            android:tint="@color/primaryColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/config_email_label_icon_id" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/config_position_label_id"
            style="@style/traiLead_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:text="@{viewModel.traineeSelected.position.name()}"
            android:theme="@style/traiLead_text"
            app:layout_constraintStart_toEndOf="@id/config_position_label_icon_id"
            app:layout_constraintTop_toTopOf="@id/config_position_label_icon_id" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_action_config_trainee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/config_position_label_icon_id" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/config_edit_rol_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/edit_trainee_rol"
            android:textAlignment="textStart"
            app:icon="@drawable/ic_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_action_config_trainee" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/config_edit_material_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/edit_material_trainee"
            android:textAlignment="textStart"
            app:icon="@drawable/ic_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/config_edit_rol_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/config_unlinked_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/unlinked_trainee"
            android:textAlignment="textStart"
            app:icon="@drawable/ic_unlink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/config_edit_material_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/config_delete_trainee_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:backgroundTint="@color/red"
            android:text="@string/delete_trainee"
            android:textAlignment="textStart"
            app:icon="@drawable/ic_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/config_unlinked_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
